--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "Shoonya Flagger",
-  "version": "1.3",
+  "name": "Shoonya Flagger - AI4Bharat",
+  "version": "1.4",
   "permissions": [
     "contextMenus",
     "activeTab",
